# diff-eq

./: README.md  com.qrtal.DiffEq.json  meson.build
data/: com.qrtal.DiffEq.desktop.in  com.qrtal.DiffEq.gschema.xml  com.qrtal.DiffEq.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: diff-eq.gresource.xml  diff-eq.in  main.py  meson.build  window.py  window.ui
